fix: Report runs without work, correct the first TUI frame, stop stripping jar classes
Three defects found while analysing an already finished workspace:

- maven-shade-plugin ran with minimizeJar=true, which removed the classes that
  logback and the XML parser implementations only resolve at runtime. The jar
  logged nothing at all and could not create an XML parser. minimizeJar is gone
  and the artefact smoke test (JarSmokeIT, failsafe in the verify phase) fails the
  build when a declared service provider is missing from the jar, when diagnostics
  do not reach the console, when the XML factories are unavailable or when the
  SBOM cannot be parsed. A negative test strips a provider class from a copy of
  the artefact so the guard's own detection stays exercised.
- The aggregate SBOM was generated in the package phase, after the test phase, so
  'mvn clean package' failed its SBOM tests on a clean checkout. It is generated in
  process-classes now, which the SBOM tests depend on, and the documented two-step
  build is no longer needed.
- A run whose tasks are all successful started the TUI, painted one frame with
  every task shown as pending (the statuses were applied after the first paint) and
  closed it milliseconds later. Pre-completed tasks are marked before the first
  frame, and a run without runnable tasks now states that instead of starting a TUI
  and a summary that reports no work. JLine's terminal uses restricted
  java.lang.foreign methods, so the jar declares Enable-Native-Access: ALL-UNNAMED
  and the exec:java run path documents the equivalent flag.

mvn clean verify: 114 unit tests and 6 artefact tests pass.